package hitrash.jumismo.android.uoc.edu.hitrash;


import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import androidx.test.espresso.DataInteraction;
import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.rule.GrantPermissionRule;
import androidx.test.runner.AndroidJUnit4;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;

import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.pressImeActionButton;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static hitrash.jumismo.android.uoc.edu.hitrash.TestUtil.childAtPosition;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class ShowAndCreateGroupActivityTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Rule
    public GrantPermissionRule mGrantPermissionRule =
            GrantPermissionRule.grant(
                    "android.permission.ACCESS_FINE_LOCATION",
                    "android.permission.ACCESS_COARSE_LOCATION");

    @Test
    public void showAndCreateGroupActivityTest() {
        ViewInteraction appCompatButton = onView(
                allOf(withId(R.id.buttonLogin), withText("Login"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                1),
                        isDisplayed()));
        appCompatButton.perform(click());

        ViewInteraction appCompatEditText = onView(
                allOf(withId(R.id.editUsername),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatEditText.perform(click());

        ViewInteraction appCompatEditText2 = onView(
                allOf(withId(R.id.editUsername),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatEditText2.perform(replaceText("marta"), closeSoftKeyboard());

        ViewInteraction appCompatEditText3 = onView(
                allOf(withId(R.id.editUsername), withText("marta"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatEditText3.perform(pressImeActionButton());

        ViewInteraction appCompatEditText4 = onView(
                allOf(withId(R.id.editPassword),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                4),
                        isDisplayed()));
        appCompatEditText4.perform(replaceText("marta"), closeSoftKeyboard());

        ViewInteraction appCompatEditText5 = onView(
                allOf(withId(R.id.editPassword), withText("marta"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                4),
                        isDisplayed()));
        appCompatEditText5.perform(pressImeActionButton());

        ViewInteraction appCompatImageButton = onView(
                allOf(withId(R.id.confirm), withContentDescription("Login"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                5),
                        isDisplayed()));
        appCompatImageButton.perform(click());

        ViewInteraction appCompatButton2 = onView(
                allOf(withId(R.id.buttonHikingTrails), withText("Hiking Trails"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                4),
                        isDisplayed()));
        appCompatButton2.perform(click());

//        ViewInteraction recyclerView = onView(
//                allOf(withId(R.id.hiking_trail_list_recycler_view),
//                        childAtPosition(
//                                withClassName(is("android.support.constraint.ConstraintLayout")),
//                                1)));
//        recyclerView.perform(actionOnItemAtPosition(1, click()));

        onView(TestUtil.withRecyclerView(R.id.hiking_trail_list_recycler_view).atPosition(1)).perform(click());

        ViewInteraction appCompatImageButton2 = onView(
                allOf(withId(R.id.imageUserGroupButton),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                14),
                        isDisplayed()));
        appCompatImageButton2.perform(click());



        ViewInteraction appCompatEditText6 = onView(
                allOf(withId(R.id.groupNameInput),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.mScrollView),
                                        0),
                                2),
                        isDisplayed()));
        appCompatEditText6.perform(replaceText("Group"), closeSoftKeyboard());

        ViewInteraction appCompatEditText7 = onView(
                allOf(withId(R.id.groupDescriptionInput),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.mScrollView),
                                        0),
                                4),
                        isDisplayed()));
        appCompatEditText7.perform(replaceText("Desc"), closeSoftKeyboard());

        ViewInteraction appCompatEditText8 = onView(
                allOf(withId(R.id.dateGroupEditText),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.mScrollView),
                                        0),
                                6),
                        isDisplayed()));
        appCompatEditText8.perform(click());

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(40);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction appCompatButton3 = onView(
                allOf(withId(R.id.done_button), withText("Aceptar"),
                        childAtPosition(
                                allOf(withId(R.id.ok_cancel_buttons_layout),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                2)),
                                1),
                        isDisplayed()));
        appCompatButton3.perform(click());

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(100);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction appCompatButton4 = onView(
                allOf(withId(R.id.done_button), withText("Aceptar"),
                        childAtPosition(
                                allOf(withId(R.id.ok_cancel_buttons_layout),
                                        childAtPosition(
                                                withId(R.id.time_picker_dialog),
                                                4)),
                                1),
                        isDisplayed()));
        appCompatButton4.perform(click());

        ViewInteraction appCompatEditText10 = onView(
                allOf(withId(R.id.textLatitud),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.mScrollView),
                                        0),
                                8)));
        appCompatEditText10.perform(scrollTo(), replaceText("30"), closeSoftKeyboard());

        ViewInteraction appCompatEditText11 = onView(
                allOf(withId(R.id.textLongitud),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.mScrollView),
                                        0),
                                10)));
        appCompatEditText11.perform(scrollTo(), replaceText("30"), closeSoftKeyboard());

        ViewInteraction appCompatImageButton3 = onView(
                allOf(withId(R.id.addMarker),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.mScrollView),
                                        0),
                                11)));
        appCompatImageButton3.perform(scrollTo(), click());

//        ViewInteraction appCompatEditText9 = onView(
//                allOf(withId(R.id.locationGroupEditText),
//                        TestUtil.childAtPosition(
//                                TestUtil.childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                8),
//                        isDisplayed()));
//        appCompatEditText9.perform(replaceText("Seville"), closeSoftKeyboard());

        DataInteraction appCompatCheckedTextView = onData(anything())
                .inAdapterView(allOf(withId(R.id.listViewUsers),
                        childAtPosition(
                                withClassName(is("android.support.constraint.ConstraintLayout")),
                                13)))
                .atPosition(3);
        appCompatCheckedTextView.perform(click());

        DataInteraction appCompatCheckedTextView2 = onData(anything())
                .inAdapterView(allOf(withId(R.id.listViewUsers),
                        childAtPosition(
                                withClassName(is("android.support.constraint.ConstraintLayout")),
                                13)))
                .atPosition(4);
        appCompatCheckedTextView2.perform(click());

        ViewInteraction appCompatImageButton4 = onView(
                allOf(withId(R.id.acceptButtonGroup),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.mScrollView),
                                        0),
                                14),
                        isDisplayed()));
        appCompatImageButton4.perform(click());
    }


}
